deploy/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-ai-api
  namespace: secure-ai
  labels: {app: secure-ai-api}
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxUnavailable: 0, maxSurge: 1}
  selector:
    matchLabels: {app: secure-ai-api}
  template:
    metadata:
      labels: {app: secure-ai-api}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: secure-ai-api
      securityContext:
        runAsNonRoot: true
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: api
          image: ghcr.io/josepharayemi-netizen/secure-multicloud-ai-platform:latest
          imagePullPolicy: IfNotPresent
          ports: [{name: http, containerPort: 8000}]
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: ["ALL"]}
          resources:
            requests: {cpu: 100m, memory: 192Mi}
            limits: {cpu: 500m, memory: 512Mi}
          readinessProbe:
            httpGet: {path: /health/ready, port: http}
            initialDelaySeconds: 5
          livenessProbe:
            httpGet: {path: /health/live, port: http}
            initialDelaySeconds: 10
